--- a/src/container/dashboard.hbs
+++ b/src/container/dashboard.hbs
@@ -30,23 +30,23 @@
 
 <body>
 
-    <div class="page page_dashboard">
-        <aside class="page_aside aside vertical vertical_big">
-            <div class="text aside_logo">
+    <div class="page page-dashboard">
+        <aside class="page-aside aside vertical vertical-big">
+            <div class="text aside-logo">
                 Sidebar
             </div>
-            <nav class="vertical vertical_small">
-                <a href="#" class="nav_button nav_button_active click">
-                    <span class="icon nav_button_icon" style="background-image: url('/svg/nav/home.svg')"></span>
-                    <span class="text text_light">Home</span>
+            <nav class="vertical vertical-small">
+                <a href="#" class="nav-button nav-button-active click">
+                    <span class="icon nav-button-icon" style="background-image: url('/svg/nav/home.svg')"></span>
+                    <span class="text text-light">Home</span>
                 </a>
-                <a href="#" class="nav_button click">
-                    <span class="icon nav_button_icon" style="background-image: url('/svg/nav/order.svg')"></span>
-                    <span class="text text_light">Orders</span>
+                <a href="#" class="nav-button click">
+                    <span class="icon nav-button-icon" style="background-image: url('/svg/nav/order.svg')"></span>
+                    <span class="text text-light">Orders</span>
                 </a>
-                <a href="#" class="nav_button click">
-                    <span class="icon nav_button_icon" style="background-image: url('/svg/nav/products.svg')"></span>
-                    <span class="text text_light">Products</span>
+                <a href="#" class="nav-button click">
+                    <span class="icon nav-button-icon" style="background-image: url('/svg/nav/products.svg')"></span>
+                    <span class="text text-light">Products</span>
                 </a>
 
                 {{!-- <div class="relative click">
@@ -65,21 +65,21 @@
             </nav>
         </aside>
         <header class="header">
-            <div class="layout header_content text_small">
-                <div class="header_search relative">
-                    <input type="text" placeholder="Search" class="text field field_header">
-                    <span class="icon header_icon_search"
+            <div class="layout header-content text-small">
+                <div class="header-search relative">
+                    <input type="text" placeholder="Search" class="text field field-header">
+                    <span class="icon header-icon-search"
                         style="background-image: url('/svg/header/search.svg');"></span>
-                    <span class="icon header_icon_settings icon_button icon_color_blue click"
+                    <span class="icon header-icon-settings icon-button icon-color-blue click"
                         style="background-image: url('/svg/header/setting.svg');"></span>
                 </div>
-                <div class="header_icon_3">
-                    <div class="header_icon_right">
-                        <span class="icon header_icon_wifi icon_button icon_color_wifi_message click"
+                <div class="header-icon-3">
+                    <div class="header-icon-right">
+                        <span class="icon header-icon-wifi icon-button icon-color-wifi-message click"
                             style="background-image: url('/svg/header/wifi.svg');"></span>
-                        <span class="icon header_icon_translator icon_button icon_color_blue click"
+                        <span class="icon header-icon-translator icon-button icon-color-blue click"
                             style="background-image: url('/svg/header/translator.svg');"></span>
-                        <span class="icon header_icon_message icon_button icon_color_wifi_message click"
+                        <span class="icon header-icon-message icon-button icon-color-wifi-message click"
                             style="background-image: url('/svg/header/message.svg');"></span>
                     </div>
                 </div>
@@ -87,55 +87,143 @@
         </header>
         <main class="main">
             <div class="layout">
-                <section class="box analytic_block">
-                    <div class="analytic analytic_double analytic_blue">
-                        <span class="icon analytic_button icon_button icon_color_blue click"
+                <section class="box analytic-block">
+                    <div class="analytic analytic-double analytic-blue">
+                        <span class="icon analytic-button icon-button icon-color-blue click"
                             style="background-image: url('/svg/analytic/order.svg');"></span>
 
-                        <div class="relative vertical vertical_small">
-                            <div class="analytic_title text text_light">$961</div>
-                            <div class="analytic_info text text_small text_lighter">Total Order</div>
+                        <div class="relative vertical vertical-small">
+                            <div class="analytic-title text text-light">$961</div>
+                            <div class="analytic-info text text-small text-lighter">Total Order</div>
 
-                            <span class="icon analytic_arrow"
+                            <span class="icon analytic-arrow"
                                 style="background-image: url('/svg/analytic/arrow.svg');"></span>
                         </div>
                     </div>
-                    <div class="analytic analytic_double analytic_dark_blue">
-                        <span class="icon analytic_button icon_button icon_color_blue_dark click"
+                    <div class="analytic analytic-double analytic-dark-blue">
+                        <span class="icon analytic-button icon-button icon-color-blue-dark click"
                             style="background-image: url('/svg/analytic/earning.svg');"></span>
 
-                        <div class="relative vertical vertical_small">
-                            <div class="analytic_title text text_light">$500.00</div>
-                            <div class="analytic_info text text_small text_lighter">Total earning</div>
+                        <div class="relative vertical vertical-small">
+                            <div class="analytic-title text text-light">$500.00</div>
+                            <div class="analytic-info text text-small text-lighter">Total earning</div>
 
-                            <span class="icon analytic_arrow"
+                            <span class="icon analytic-arrow"
                                 style="background-image: url('/svg/analytic/arrow.svg');"></span>
                         </div>
                     </div>
-                    <div class="analytic analytic_content analytic_blue">
-                        <div class="analytic_content_text">
-                            <span class="icon analytic_button icon_button icon_color_blue"
+                    <div class="analytic analytic-content analytic-blue">
+                        <div class="analytic-content-text">
+                            <span class="icon analytic-button icon-button icon-color-blue"
                                 style="background-image: url('/svg/analytic/earning.svg');"></span>
 
-                            <div class="relative vertical vertical_small">
-                                <div class="analytic_title text text_light">$203k</div>
-                                <div class="analytic_info text text_small text_lighter">Total Income</div>
+                            <div class="relative vertical vertical-small">
+                                <div class="analytic-title text text-light">$203k</div>
+                                <div class="analytic-info text text-small text-lighter">Total Income</div>
                             </div>
                         </div>
                     </div>
-                    <div class="analytic analytic_content analytic_white">
-                        <div class="analytic_content_text">
-                            <span class="icon analytic_button icon_button icon_color_yellow"
+                    <div class="analytic analytic-content analytic-white">
+                        <div class="analytic-content-text">
+                            <span class="icon analytic-button icon-button icon-color-yellow"
                                 style="background-image: url('/svg/analytic/income.svg');"></span>
 
-                            <div class="relative vertical vertical_small">
-                                <div class="analytic_title text text_light">$203k</div>
-                                <div class="analytic_info text text_small text_lighter">Total Income</div>
+                            <div class="relative vertical vertical-small">
+                                <div class="analytic-title text text-light">$203k</div>
+                                <div class="analytic-info text text-small text-lighter">Total Income</div>
                             </div>
                         </div>
                     </div>
                 </section>
+
             </div>
+
+            <div class="layout">
+                <section class="section-purchase-payment-block">
+                    <div class="purchase-list">
+                        <h1 class="purchase-title">Purchase list</h1>
+                        <div class="divider"></div>
+                        <div class="data">
+                            <div class="purchase-list-box">
+                                <p class="line">ID437661</p>
+                                <p class="line">May 11, 2023, 14:21</p>
+                            </div>
+                            <div class="purchase-list-box">
+                                <p class="line">AirOn ProCam</p>
+                                <p class="line">7/8 USB Type-C</p>
+                            </div>
+                            <div class="purchase-list-box">
+                                <p class="line">132.32 EUR</p>
+                                <p class="notpad">Not paid</p>
+                            </div>
+                            <div class="purchase-list-box">
+                                <p class="line">Customer</p>
+                                <p class="line">robin@com.de</p>
+                            </div>
+                        </div>
+                        <div class="divider"></div>
+                        <div class="data">
+                            <div class="purchase-list-box">
+                                <p class="line">ID437661</p>
+                                <p class="line">May 11, 2023, 14:21</p>
+                            </div>
+                            <div class="purchase-list-box">
+                                <p class="line">PHILIPS Essential</p>
+                                <p class="line">HD9200/90</p>
+                            </div>
+                            <div class="purchase-list-box">
+                                <p class="line">543 USD</p>
+                                <p class="payby">Pay by Stripe</p>
+                            </div>
+                            <div class="purchase-list-box">
+                                <p class="line">Customer</p>
+                                <p class="line">robin@com.de</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="payment-box">
+                        <div class="header-payment">
+                            <h1 class="payment-title">Payment</h1>
+                            <div class="divider-playment"></div>
+                            <div class="input-radio-block">
+                                <input type="radio" class="input-radio"><span class="">Credit card</span>
+                                <input type="radio" class="input-radio"><span>Credit card</span>
+                                <input type="radio" class="input-radio"><span>Credit card</span>
+                            </div>
+                            <div class="divider-playment"></div>
+                            <div class="input-block">
+                                <label for="text">Name on card</label>
+                                <input type="text" class="input-text" id="text">
+                                <label for="text">Credit card number</label>
+                                <input type="text" class="input-text" id="text">
+                                <label for="text">Expiration</label>
+                                <input type="text" class="input-text" id="text">
+                                <label for="text">CVV</label>
+                                <input type="text" class="input-text" id="text">
+                            </div>
+                            <div class="divider-playment"></div>
+                            <div class="select-block">
+                                <label for="select">Country</label>
+                                <select name="Country" id="select" class="select">
+                                    <option>Choose...</option>
+                                </select>
+                                <label for="select">State</label>
+                                <select name="Country" id="select" class="select">
+                                    <option>Choose...</option>
+                                </select>
+                            </div>
+                            <div class="divider-playment"></div>
+                            <div class="button-block">
+                                <div class="button">
+                                    <p class="button-text">Continue to checkout</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </section>
+            </div>
+
         </main>
     </div>
 
