--- a/src/container/slack.hbs
+++ b/src/container/slack.hbs
@@ -130,16 +130,114 @@
         </section>
 
         <section class="section_feature">
-            <div class="img_card">
-                <img src="/img/img-what-you-need.png" alt="what you need" class="what_you_need">
-            </div>
-            <div class="feature_title_text">
-                <h1 class="feature_title">What you need, when you need it</h1>
+            <div class="page_content features_section_2">
+                <div class="feature_section_block">
+                    <div class="img_card">
+                        <img src="/img/img-what-you-need.png" alt="what you need" class="what_you_need">
+                    </div>
+                    <div class="feature_title_text">
+                        <h1 class="feature_title">What you need, when you need it</h1>
 
-                <p class="feature_text">Spend less time shuffling tabs with a comprehensive message archive and
-                    all your work tools at your fingertips.</p>
+                        <p class="feature_text">Spend less time shuffling tabs with a comprehensive message archive and
+                            all your work tools at your fingertips.</p>
+                    </div>
+
+                    <div class="features_grid_4 feature_cards_4">
+                        <div class="feat_card feature_card_big_one">
+                            <img src="/img/Frame.png" alt="Frame" class="frame_card_big">
+                            <strong class="feat_card_title">Apps and Integrations</strong>
+                            <p class="double_line feat_card_description">Streamline work by connecting
+                                Slack with other services like
+                                Google Drive, Office 365 and
+                                over 2,200 more.</p>
+                            <img src="/img/image.png" alt="" class="slack_cards_one_arrow">
+
+                        </div>
+
+                        <div class="feat_card feature_card_big_one">
+                            <img src="/img/Frame 1.png" alt="Frame" class="frame_card_big">
+                            <strong class="feat_card_title">Workflow Builder</strong>
+                            <p class="double_line feat_card_description">Automate routine actions and
+                                communication, so you can get
+                                back to the kind of work only
+                                humans can do.</p>
+                            <img src="/img/image.png" alt="" class="slack_cards_one_arrow">
+
+                        </div>
+                        <div class="feature_cards_small_2">
+                            <div class="feat_card feature_card_one_small">
+                                <img src="/img/Frame2.png" alt="Frame" class="frame_card_big">
+                                <strong class="feat_card_title">Search</strong>
+                                <img src="/img/image.png" alt="" class="slack_cards_one_arrow_small">
+
+                            </div>
+
+                            <div class="feat_card feature_card_one_small">
+                                <img src="/img/Frame3.png" alt="Frame" class="frame_card_big">
+                                <strong class="feat_card_title">File sharing</strong>
+                                <img src="/img/image.png" alt="" class="slack_cards_one_arrow_small">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+        <div class="deliveroo_card">
+            <img src="/img/img-deliveroo.png" alt="Deliveroo" class="deliveroo_picture">
+            <div class="deliveroo_text_card">
+                <p class="deliveroo_text">“The thing that keeps us connected
+                    the most is Slack. It’s a very
+                    immediate and straightforward
+                    method of communication, and
+                    really the only channel that people
+                    prefer and enjoy using.”</p>
+                <div class="deliveroo_logo_card">
+                    <img src="/img/deliveroo.png" alt="Deliveroo logo" class="deliveroo_logo">
+                </div>
+                <div class="deliveroo_text_small_card">
+                    <p class="deliveroo_text_small">Will Sprunt, CIO, Deliveroo</p>
+                </div>
+            </div>
+        </div>
+        <div class="slack_card">
+            <div class="slack_title">
+                <h1 class="title_slack">Explore more about working in Slack</h1>
+            </div>
+            <div class="slack_cards_3">
+                <div class="slack_card_one">
+                    <img src="/img/slack-101.png" alt="Slack-101" class="slack_img_one">
+                    <p class="slack_card_one_text">Slack Tutorials</p>
+                    <h4 class="slack_card_one_title">Slack 101</h4>
+                    <div class="slack_card_one_footer">
+                        <p class="slack_card_one_text_end">Learn more</p>
+                        <img src="/img/image.png" alt="" class="slack_card_one_arrow">
+                    </div>
+                </div>
+                <div class="slack_card_two">
+                    <img src="/img/slack-vs-email.png" alt="Slack-101" class="slack_img_one">
+                    <p class="slack_card_one_text">Slack vs. Email</p>
+                    <h4 class="slack_card_one_title">An easier, more
+                        organized way to work</h4>
+                    <div class="slack_card_two_footer">
+                        <p class="slack_card_one_text_end">Learn more</p>
+                        <img src="/img/image.png" alt="" class="slack_card_one_arrow">
+                    </div>
+                </div>
+                <div class="slack_card_three">
+                    <img src="/img/fastly-shared-channels-wow-enterprise-customers.png" alt="Slack-101"
+                        class="slack_img_one">
+                    <p class="slack_card_one_text">Customer Stories</p>
+                    <h4 class="slack_card_one_title">How Fastly uses Slack
+                        Connect to wow
+                        enterprise customers</h4>
+                    <div class="slack_card_three_footer">
+                        <p class="slack_card_one_text_end">Learn more</p>
+                        <img src="/img/image.png" alt="" class="slack_card_one_arrow">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
